[metadata]
name = ixu
version = 0.1.0
description = A project to better visualize gitlab issues statistics
long_description = file: README.md
author = Luan Guimarães
author_email = luang@riseup.net
url = https://github.com/luanguimaraesla/ixu
keywords =
  gitlab
  issue
  milestone
  manager
  management
  tracking
license = None
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
  flask >= 1.1.1
  jinja2 >= 2.10.1
  joblib >= 0.13.2
  urllib3 >= 1.25.3
  werkzeug >= 0.15.5
  gevent >= 1.4.0
setup_requires =
	setuptools >= 30.3.0

[options.extras_require]
dev =
	pytest
	pytest-cov
	coverage
	flake8
  bumpversion
docs =
	docutils
	sphinx-autobuild

[flake8]
ignore = E501, E731
exclude = .tox,.git,__pycache__,docs/conf.py,build,dist,tests,src/**/__init__.py,src/**/all.py
max-complexity = 10

[pep8]
ignore = E501,E731
max-line-length = 80
